fix footer to bottom and align text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
 body {
     color: #2f4f4f;
     background-color: white;
+
+}
+
+
+h2,
+div,
+p {
+    padding-left: 20px;
 }
 
 header {
@@ -13,10 +21,19 @@ header {
 footer {
     background-color: #0F569E;
     color: black;
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
 }
 
 h1 {
     padding-bottom: 20px;
     padding-top: 10px;
     padding-left: 20px;
+}
+
+.btn {
+    margin-bottom: 20px;
 }
